# fyyur-backend-project

./: .gitignore  README.md  app.py  config.py  env.example  fyuur_backend_implementation_plan.md  fyyur_project_details.txt  main.py  pyproject.toml  requirements.txt  test_setup.sh
app/: __init__.py
app/controllers/: artists.py  main.py  shows.py  venues.py
app/exceptions/: __init__.py  base.py  errors.py
app/models/: __init__.py  artist.py  base.py  genre.py  show.py  venue.py
app/repositories/: __init__.py  artist_repository.py  base.py  genre_repository.py  show_repository.py  venue_repository.py
app/schemas/: __init__.py  artist_schema.py  common.py  show_schema.py  venue_schema.py
app/services/: __init__.py  artist_service.py  base.py  genre_service.py  show_service.py  venue_service.py
app/utils/: __init__.py  constants.py  formatters.py  validators.py
docs/: INDEX.md  INSTALLATION_GUIDE.md  README.md  TESTING_GUIDE.md  fyuur_backend_implementation_plan2.md
migrations/versions/: c7d504eff853_initial_migration_with_corrected_models.py
scripts/: check_db.py  db_utils.py  seed.py
templates/forms/: new_show.html  new_venue.html
templates/layouts/: main.html
templates/pages/: artists.html  show_artist.html  show_venue.html  venues.html
tests/: conftest.py  test_artists.py  test_shows.py  test_venues.py
tests/e2e/: test_e2e.py
tests/fixtures/: test_fixtures.py
tests/integration/: test_integration.py
tests/unit/: test_controllers.py  test_exceptions.py  test_models.py  test_repositories.py  test_schemas.py  test_services.py  (+1 more)
